--- a/src/app/subscription/subscription.component.html
+++ b/src/app/subscription/subscription.component.html
@@ -1,12 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar mode="md">
     <ion-buttons slot="start">
-      <ion-img
-        src="assets/logo.svg"
-        alt="App logo"
-        [routerLink]="['/home']"
-        routerLinkActive="router-link-active"
-      ></ion-img>
+      <ion-img src="assets/logo.svg" alt="App logo" [routerLink]="['/home']"
+        routerLinkActive="router-link-active"></ion-img>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -30,82 +26,50 @@
                       <!-- name -->
                       <div class="input_item">
                         <ion-label position="stacked">Your Name</ion-label>
-                        <ion-input
-                          type="text"
-                          placeholder="e.g Osama Alshathri"
-                          fill="outline"
-                          formControlName="userName"
-                          errorText="required name"
-                        ></ion-input>
+                        <ion-input type="text" placeholder="e.g Osama Alshathri" fill="outline"
+                          formControlName="userName" errorText="required name"></ion-input>
                       </div>
                       <!-- email -->
                       <div class="input_item">
                         <ion-label position="stacked">Email</ion-label>
-                        <ion-input
-                          type="email"
-                          placeholder="Osama@gmail.com"
-                          fill="outline"
-                          formControlName="email"
-                          errorText="required email"
-                        ></ion-input>
+                        <ion-input type="email" placeholder="Osama@gmail.com" fill="outline" formControlName="email"
+                          errorText="required email"></ion-input>
                       </div>
 
                       <h2>Child’s Information</h2>
                       <!-- name -->
                       <div class="input_item">
-                        <ion-label position="stacked"
-                          >Child’s Full Name</ion-label
-                        >
-                        <ion-input
-                          type="text"
-                          placeholder="e.g Sarah Mohammad"
-                          fill="outline"
-                          formControlName="childName"
-                          errorText="required childName"
-                        ></ion-input>
+                        <ion-label position="stacked">Child’s Full Name</ion-label>
+                        <ion-input type="text" placeholder="e.g Sarah Mohammad" fill="outline"
+                          formControlName="childName" errorText="required childName"></ion-input>
                       </div>
                       <!-- child date of birth -->
                       <div class="input_item">
-                        <ion-label position="stacked"
-                          >Child’s Date of Birth</ion-label
-                        >
-                        <ion-datetime-button
-                          datetime="datetime"
-                        ></ion-datetime-button>
+                        <ion-label position="stacked">Child’s Date of Birth</ion-label>
+                        <ion-datetime-button datetime="datetime"></ion-datetime-button>
 
                         <ion-modal [keepContentsMounted]="true">
                           <ng-template>
-                            <ion-datetime
-                              id="datetime"
-                              presentation="date"
-                              value="2023-11-02"
-                              [preferWheel]="true"
-                              (ionChange)="changeDate($event)"
-                              [formatOptions]="{
+                            <ion-datetime id="datetime" presentation="date" value="2023-11-02" [preferWheel]="true"
+                              (ionChange)="changeDate($event)" [formatOptions]="{
                               date: {
                                 weekday: 'short',
                                 month: 'long',
                                 day: '2-digit',
                               }
-                            }"
-                            ></ion-datetime>
+                            }"></ion-datetime>
                           </ng-template>
                         </ion-modal>
                       </div>
                       <!-- child grade -->
                       <div class="select_item">
                         <ion-label position="stacked">Grade</ion-label>
-                        <ion-select
-                          formControlName="selectedGrade"
-                          fill="outline"
-                          interface="popover"
-                          label="e.g Grade 2"
-                          justify="space-between"
-                        >
+                        <ion-select formControlName="selectedGrade" fill="outline" interface="popover"
+                          label="e.g Grade 2" justify="space-between">
                           @for (grade of grades; track grade.id) {
                           <ion-select-option [value]="grade.id">{{
                             grade.name
-                          }}</ion-select-option>
+                            }}</ion-select-option>
                           }
                         </ion-select>
                       </div>
@@ -117,7 +81,7 @@
                               <!-- <div class="radio_item"> -->
                               <ion-radio mode="ios" [value]="gender.id">{{
                                 gender.name
-                              }}</ion-radio>
+                                }}</ion-radio>
                               <!-- </div> -->
                             </ion-col>
                             }
@@ -127,78 +91,23 @@
                       <h2>As a parent select any 3 topics</h2>
                       <div class="topics">
                         @for ( topic of topics; track topic.id) {
-                        <ion-chip
-                          [outline]="topic.selected"
-                          [disabled]="topic.disabled"
-                          (click)="updateSelection(topic.id, topic.selected)"
-                          >{{ topic.name }}</ion-chip
-                        >
+                        <ion-chip [outline]="topic.selected" [disabled]="topic.disabled"
+                          (click)="updateSelection(topic.id, topic.selected)">{{ topic.name }}</ion-chip>
                         }
                       </div>
                       @if(errorText){
                       <div class="error_text">{{ errorText }}</div>
                       }
 
-                      <ion-button
-                        class="mt-70"
-                        expand="block"
-                        (click)="submitForm()"
-                      >
+                      <ion-button class="mt-70" expand="block" (click)="submitForm()">
                         Continue to Payment
                       </ion-button>
                     </form>
                   </ion-card-content>
                 </ion-col>
-                <ion-col size="12" sizeMd="4" class="summary ion-padding pt-50">
-                  <p>Of your Monthly Surprise Box</p>
-                  <!-- Mystery Box  -->
-                  <div class="mystery_box">
-                    <div>
-                      <h2 class="title">Mystery Box</h2>
-                      <p class="quantity">X 1</p>
-                    </div>
-                    <div>
-                      <h2 class="price">SAR <strong>456</strong></h2>
-                      <p class="billing">Monthly</p>
-                    </div>
-                  </div>
-                  <!-- Subtotal -->
-                  <div class="mystery_box">
-                    <div>
-                      <h2 class="title">Subtotal</h2>
-                    </div>
-                    <div>
-                      <h2 class="price">SAR <strong>456</strong></h2>
-                    </div>
-                  </div>
-                  <!-- Shipping -->
-                  <div class="mystery_box">
-                    <div>
-                      <h2 class="title">Shipping</h2>
-                    </div>
-                    <div>
-                      <p class="price">Free</p>
-                    </div>
-                  </div>
-                  <!-- Taxes -->
-                  <div class="mystery_box">
-                    <div>
-                      <h2 class="title">Taxes</h2>
-                    </div>
-                    <div>
-                      <h2 class="price">SAR <strong>0</strong></h2>
-                    </div>
-                  </div>
-                  <!-- Total -->
-                  <div class="mystery_box">
-                    <div>
-                      <h2 class="title">Total</h2>
-                    </div>
-                    <div>
-                      <h2 class="price">SAR <strong>456</strong></h2>
-                      <p class="billing">Monthly</p>
-                    </div>
-                  </div>
+                <!-- summary -->
+                <ion-col size="12" sizeMd="4" class="ion-padding pt-50 summary">
+                  <app-summary />
                 </ion-col>
               </ion-row>
             </ion-card>
